<resources>
    <string name="app_name">pettracker</string>
    <string name="main_page_selected">%s page is selected</string>
    <string name="password">PASSWORD</string>
    <string name="re_type_password">RE-TYPE PASSWORD</string>
    <string name="osoite">ADDRESS</string>
    <string name="puhelinumero">PHONENUMBER</string>
    <string name="kayttajatunnus">USERNAME</string>
    <string name="luo_tili">CREATE ACCOUNT</string>
    <string name="anna_salasana">GIVE PASSWORD</string>
    <string name="anna_kayttajatunnus">GIVE USERNAME</string>
    <string name="nimi">NAME</string>
    <string name="puhelinnumero">PHONENUMBER</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="title_activity_bottom_navication">BottomNavicationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dog_info">Dog info</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="address">Address</string>
    <string name="breed">Breed</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>